# image_rotation_and_scaling

./: CMakeLists.txt  Makefile  README.md  benchmark  benchmark.cpp  benchmark.h  buddy_memory.h  compile.txt  compile_commands.json  image.cpp  image.h  main  main.cpp  stb_image.h  stb_image_write.h  stb_wrapper.cpp
.github/workflows/: cpp-linter.yml
test/: example.txt
